slp_parser/slpParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from slp.g4 by ANTLR 4.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5")]
[System.CLSCompliant(false)]
public partial class slpParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, TRUE=13, FALSE=14, NULL=15, STRING=16, INT=17, 
		FLOAT=18, ID=19, OPEN_BRACE=20, CLOSE_BRACE=21, OP=22, NATIVE=23, COMMENT=24, 
		LINE_COMMENT=25, SPACES=26, OPEN_PAREN=27, CLOSE_PAREN=28, OPEN_BRACK=29, 
		CLOSE_BRACK=30, NEWLINE=31, WS=32, INDENT=33, DEDENT=34;
	public const int
		RULE_program = 0, RULE_assoc = 1, RULE_opdef = 2, RULE_token = 3, RULE_exp = 4, 
		RULE_block = 5;
	public static readonly string[] ruleNames = {
		"program", "assoc", "opdef", "token", "exp", "block"
	};

	private static readonly string[] _LiteralNames = {
		null, "'fx'", "'fy'", "'xf'", "'yf'", "'xfx'", "'xfy'", "'yfx'", "'yfy'", 
		"'yfxx'", "'op'", "'{'", "'}'", "'true'", "'false'", "'<>'", null, null, 
		null, null, "'<'", "'>'", null, null, null, null, null, "'('", "')'", 
		"'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "TRUE", "FALSE", "NULL", "STRING", "INT", "FLOAT", "ID", "OPEN_BRACE", 
		"CLOSE_BRACE", "OP", "NATIVE", "COMMENT", "LINE_COMMENT", "SPACES", "OPEN_PAREN", 
		"CLOSE_PAREN", "OPEN_BRACK", "CLOSE_BRACK", "NEWLINE", "WS", "INDENT", 
		"DEDENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "slp.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public slpParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 12; exp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssocContext : ParserRuleContext {
		public AssocContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assoc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.EnterAssoc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.ExitAssoc(this);
		}
	}

	[RuleVersion(0)]
	public AssocContext assoc() {
		AssocContext _localctx = new AssocContext(Context, State);
		EnterRule(_localctx, 2, RULE_assoc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 14;
			_la = TokenStream.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OpdefContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(slpParser.INT, 0); }
		public AssocContext assoc() {
			return GetRuleContext<AssocContext>(0);
		}
		public ITerminalNode OP() { return GetToken(slpParser.OP, 0); }
		public OpdefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_opdef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.EnterOpdef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.ExitOpdef(this);
		}
	}

	[RuleVersion(0)]
	public OpdefContext opdef() {
		OpdefContext _localctx = new OpdefContext(Context, State);
		EnterRule(_localctx, 4, RULE_opdef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 16; Match(T__9);
			State = 17; Match(INT);
			State = 18; assoc();
			State = 19; Match(OP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TokenContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(slpParser.INT, 0); }
		public ITerminalNode FLOAT() { return GetToken(slpParser.FLOAT, 0); }
		public ITerminalNode STRING() { return GetToken(slpParser.STRING, 0); }
		public ITerminalNode TRUE() { return GetToken(slpParser.TRUE, 0); }
		public ITerminalNode FALSE() { return GetToken(slpParser.FALSE, 0); }
		public ITerminalNode ID() { return GetToken(slpParser.ID, 0); }
		public ITerminalNode OP() { return GetToken(slpParser.OP, 0); }
		public ITerminalNode NEWLINE() { return GetToken(slpParser.NEWLINE, 0); }
		public ITerminalNode NATIVE() { return GetToken(slpParser.NATIVE, 0); }
		public TokenContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_token; } }
		public override void EnterRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.EnterToken(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.ExitToken(this);
		}
	}

	[RuleVersion(0)]
	public TokenContext token() {
		TokenContext _localctx = new TokenContext(Context, State);
		EnterRule(_localctx, 6, RULE_token);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 21;
			_la = TokenStream.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << STRING) | (1L << INT) | (1L << FLOAT) | (1L << ID) | (1L << OP) | (1L << NATIVE) | (1L << NEWLINE))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpContext : ParserRuleContext {
		public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public TokenContext[] token() {
			return GetRuleContexts<TokenContext>();
		}
		public TokenContext token(int i) {
			return GetRuleContext<TokenContext>(i);
		}
		public OpdefContext[] opdef() {
			return GetRuleContexts<OpdefContext>();
		}
		public OpdefContext opdef(int i) {
			return GetRuleContext<OpdefContext>(i);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(slpParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(slpParser.NEWLINE, i);
		}
		public ExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.EnterExp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.ExitExp(this);
		}
	}

	[RuleVersion(0)]
	public ExpContext exp() {
		ExpContext _localctx = new ExpContext(Context, State);
		EnterRule(_localctx, 8, RULE_exp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				State = 27;
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 23; block();
					}
					break;
				case 2:
					{
					State = 24; token();
					}
					break;
				case 3:
					{
					State = 25; opdef();
					}
					break;
				case 4:
					{
					State = 26; Match(NEWLINE);
					}
					break;
				}
				}
				State = 29;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << TRUE) | (1L << FALSE) | (1L << STRING) | (1L << INT) | (1L << FLOAT) | (1L << ID) | (1L << OP) | (1L << NATIVE) | (1L << OPEN_PAREN) | (1L << OPEN_BRACK) | (1L << NEWLINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IslpListener typedListener = listener as IslpListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 10, RULE_block);
		try {
			State = 43;
			switch (TokenStream.La(1)) {
			case OPEN_PAREN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 31; Match(OPEN_PAREN);
				State = 32; exp();
				State = 33; Match(CLOSE_PAREN);
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 2);
				{
				State = 35; Match(T__10);
				State = 36; exp();
				State = 37; Match(T__11);
				}
				break;
			case OPEN_BRACK:
				EnterOuterAlt(_localctx, 3);
				{
				State = 39; Match(OPEN_BRACK);
				State = 40; exp();
				State = 41; Match(CLOSE_BRACK);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
